# study-c

./: CMakeLists.txt
dlinklist/: dlinklist.c  dlinklist.h  main.c
linklist/: linklist.c  linklist.h  main.c
seqlist/: main.c  seqlist.c  seqlist.h
sortlinklist/: main.c  sortlinklist.c  sortlinklist.h
